--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
- @import url('https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap');
+ @import url('https://fonts.google.com/specimen/IBM+Plex+Sans+Arabic');
 
 /* الأساسيات */
 * {
