--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
- @import url('https://fonts.google.com/specimen/IBM+Plex+Sans+Arabic');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@400;700&display=swap');
 
 /* الأساسيات */
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Amiri', serif;
+    font-family: 'IBM Plex Sans Arabic', sans-serif;
     scroll-behavior: smooth;
 }
 
@@ -36,6 +36,7 @@ header {
     text-align: center;
     transition: transform 0.3s ease;
 }
+
 
 header:hover {
     transform: translateY(-2px);
