--- a/styles.css
+++ b/styles.css
@@ -202,7 +202,7 @@ nav {
 margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Traditional Arabic', 'Amiri', serif;
+            font-family: 'IBM Plex Sans Arabic', sans-serif;
         }
 
         body {
